ingress/traefik-middleware-strip.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-app-api
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /app-api
