ingress/be-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-app-api
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /app-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: apps-strip-app-api@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ptit-boot-checkin.mooo.com
      secretName: backend-tls-cert
  rules:
    - host: ptit-boot-checkin.mooo.com
      http:
        paths:
          - path: /app-api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3456
