ingress/db-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-ingress
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`) # TCP không có domain trừ khi dùng TLS, nên dùng *
      services:
        - name: postgres-service
          port: 5432
